try to fix home height on mobile

--- a/_sass/partials/_app.scss
+++ b/_sass/partials/_app.scss
@@ -212,7 +212,7 @@ footer {
 
 .body-home {
   display: grid;
-  grid-template-rows: 100% 115px;
+  grid-template-rows: 100vh 115px;
 
   main {
     padding: 2rem;
